perf(penggajian): optimize payroll engine with redis preload and jdbc batching