@@ -3,40 +3,47 @@ package id.perumdamts.kepegawaian.services.penggajian.gajiBatchProses;
 import id.perumdamts.kepegawaian.entities.commons.EJenisErrorGaji;
 import id.perumdamts.kepegawaian.entities.commons.EProsesGaji;
 import id.perumdamts.kepegawaian.entities.penggajian.GajiBatchMaster;
+import id.perumdamts.kepegawaian.entities.penggajian.GajiBatchMasterProses;
 import id.perumdamts.kepegawaian.entities.penggajian.GajiBatchRoot;
 import id.perumdamts.kepegawaian.entities.penggajian.GajiBatchRootErrorLogs;
-import id.perumdamts.kepegawaian.exceptions.GajiFormulaException;
 import id.perumdamts.kepegawaian.exceptions.NotFoundException;
+import id.perumdamts.kepegawaian.repositories.penggajian.jdbc.GajiBatchMasterProsesJdbcRepository;
 import id.perumdamts.kepegawaian.repositories.penggajian.jpa.GajiBatchMasterProsesRepository;
 import id.perumdamts.kepegawaian.repositories.penggajian.jpa.GajiBatchMasterRepository;
 import id.perumdamts.kepegawaian.repositories.penggajian.jpa.GajiBatchRootRepository;
 import id.perumdamts.kepegawaian.services.penggajian.gajiBatchMasterProses.GajiBatchProsesKalkulasiService;
 import id.perumdamts.kepegawaian.services.penggajian.gajiBatchMasterProses.GajiBatchProsesSnapshotService;
+import id.perumdamts.kepegawaian.services.penggajian.gajiBatchMasterProses.preload.ErrorEntry;
+import id.perumdamts.kepegawaian.services.penggajian.gajiBatchMasterProses.preload.GajiPreloadContext;
+import id.perumdamts.kepegawaian.services.penggajian.gajiBatchMasterProses.preload.GajiPreloadService;
+import id.perumdamts.kepegawaian.services.penggajian.gajiBatchMasterProses.preload.HitungPegawaiResult;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.support.TransactionTemplate;
+import org.springframework.util.StopWatch;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
+import java.util.Locale;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 
 /**
- * Orchestrator proses gaji (Wave 7) — lihat docs/penggajian-proses-gaji-claim-order.md.
+ * Orchestrator proses gaji (Wave 7) — dioptimasi dengan preload pattern dan batch insert.
  *
- * <p><b>Transaksi PER FASE</b> (bukan satu transaksi besar): snapshot harus COMMIT dulu
- * sebelum fork kalkulasi jalan — fork membuka transaksi sendiri (koneksi berbeda) sehingga
- * tidak bisa melihat master yang belum commit (InnoDB isolation); satu transaksi besar
- * membuat semua fork gagal "Master hilang"/"Row already updated or deleted".
+ * <p>Alur:
+ * 1) PROSES (tx)
+ * 2) Reset hasil lama (tx)
+ * 3) Snapshot (tx, commit)
+ * 4) Preload context (Redis cache + batch live query)
+ * 5) Kalkulasi paralel (zero-DB virtual threads)
+ * 6) Bulk save (tx: JdbcTemplate batchInsert proses + saveAll masters + summary notes)
  *
- * <p>Alur: PROSES (tx) → reset hasil lama (tx) → snapshot (tx, commit) → kalkulasi paralel
- * per pegawai (fork, tx masing-masing; error per pegawai dicatat & dilanjutkan) →
- * simpan hasil (tx). Fatal → FAILED + error SYSTEM (tx terpisah, tidak rethrow).
+ * <p>Fatal error → FAILED + error SYSTEM.
  */
 @Service
 @RequiredArgsConstructor
@@ -46,15 +53,16 @@ public class GajiBatchProsesCommandService {
     private final GajiBatchRootRepository repository;
     private final GajiBatchMasterRepository gajiBatchMasterRepository;
     private final GajiBatchMasterProsesRepository gajiBatchMasterProsesRepository;
+    private final GajiBatchMasterProsesJdbcRepository gajiBatchMasterProsesJdbcRepository;
     private final GajiBatchProsesSnapshotService snapshotService;
+    private final GajiPreloadService preloadService;
     private final GajiBatchProsesKalkulasiService kalkulasiService;
     private final TransactionTemplate tx;
 
-    /** Error per pegawai — dikumpulkan dari fork, dicatat di thread utama (session Hibernate tidak thread-safe). */
-    private record ErrorEntry(String nipam, String nama, EJenisErrorGaji jenis, String notes) {
-    }
-
     public void prosesGaji(String rootBatchId) {
+        StopWatch watch = new StopWatch("Batch " + rootBatchId);
+        long startTime = System.currentTimeMillis();
+
         tx.executeWithoutResult(s -> {
             GajiBatchRoot b = root(rootBatchId);
             b.setStatus(EProsesGaji.PROSES);
@@ -65,16 +73,60 @@ public class GajiBatchProsesCommandService {
         try {
             reset(rootBatchId);
             GajiBatchRoot batch = root(rootBatchId); // detached — hanya utk batchId/periode
+
+            watch.start("snapshot");
             List<GajiBatchMaster> masters = snapshotService.snapshot(batch);
-            List<ErrorEntry> errors = prosesParallel(batch.getId(), masters);
+            watch.stop();
+
+            watch.start("preload");
+            GajiPreloadContext ctx = preloadService.preload(batch.getId(), batch.getPeriode(), masters);
+            watch.stop();
+
+            watch.start("kalkulasi");
+            List<HitungPegawaiResult> results = prosesParallel(masters, ctx);
+            watch.stop();
+
+            watch.start("bulk-save");
+            List<HitungPegawaiResult> sukses = results.stream().filter(HitungPegawaiResult::isSuccess).toList();
+            List<HitungPegawaiResult> gagal = results.stream().filter(r -> !r.isSuccess()).toList();
+
             tx.executeWithoutResult(s -> {
                 GajiBatchRoot b = root(rootBatchId);
-                errors.forEach(e -> catatError(b, e));
+
+                // 1) Bulk insert proses list
+                List<GajiBatchMasterProses> allProses = sukses.stream()
+                        .flatMap(r -> r.prosesList().stream())
+                        .toList();
+                gajiBatchMasterProsesJdbcRepository.batchInsert(allProses);
+
+                // 2) Bulk update master
+                List<GajiBatchMaster> mastersToUpdate = sukses.stream()
+                        .map(HitungPegawaiResult::master)
+                        .toList();
+                gajiBatchMasterRepository.saveAll(mastersToUpdate);
+
+                // 3) Catat error logs jika ada gagal
+                gagal.forEach(r -> catatError(b, r.error()));
+
+                // 4) Set notes JSON di batch root
+                double durasiDetik = (System.currentTimeMillis() - startTime) / 1000.0;
+                String notes = String.format(Locale.US,
+                        "{\"totalPegawai\":%d,\"berhasil\":%d,\"gagal\":%d,\"durasiDetik\":%.2f}",
+                        masters.size(), sukses.size(), gagal.size(), durasiDetik);
+                b.setNotes(notes);
                 b.setTotalPegawai(masters.size());
-                b.setStatus(EProsesGaji.WAIT_VERIFICATION_PHASE_1);
+
+                // 5) Set status: jika ada gagal -> FAILED, jika semua berhasil -> WAIT_VERIFICATION_PHASE_1
+                b.setStatus(gagal.isEmpty() ? EProsesGaji.WAIT_VERIFICATION_PHASE_1 : EProsesGaji.FAILED);
                 repository.save(b);
             });
+            watch.stop();
+
+            log.info("[GAJI] Batch {} selesai: {}", rootBatchId, watch.prettyPrint());
         } catch (Exception fatal) {
+            if (watch.isRunning()) {
+                watch.stop();
+            }
             log.error("Fatal error memproses batch {}", rootBatchId, fatal);
             tx.executeWithoutResult(s -> {
                 GajiBatchRoot b = root(rootBatchId);
@@ -89,9 +141,6 @@ public class GajiBatchProsesCommandService {
     /**
      * Hapus hasil proses lama: {@code GajiBatchMasterProses} (cascade manual via
      * batchMasterId) lalu {@code GajiBatchMaster} batch — engine idempoten (W7-1 step 2).
-     *
-     * <p>Pakai {@link TransactionTemplate} internal (bukan {@code @Transactional}): dipanggil
-     * dari {@link #prosesGaji} (self-invocation — anotasi @Transactional tidak ter-proxy).
      */
     public void reset(String rootBatchId) {
         tx.executeWithoutResult(s -> {
@@ -105,47 +154,27 @@ public class GajiBatchProsesCommandService {
     }
 
     /**
-     * Kalkulasi paralel per pegawai — error per pegawai tidak menggagalkan batch.
-     *
-     * ponytail: spec W7-1 minta StructuredTaskScope.ShutdownOnFailure, tapi API itu masih
-     * preview di JDK 25 (butuh --enable-preview di compile+test+run). Padanan setara:
-     * virtual-thread executor + submit/get — hitungSatu sudah men-catch SEMUA exception
-     * (kembali ErrorEntry/null), jadi tak ada subtask yg gagal → wait-all identik.
-     * Ganti ke StructuredTaskScope bila project mengaktifkan --enable-preview.
+     * Kalkulasi paralel per pegawai menggunakan virtual threads dengan zero-DB access.
      */
-    private List<ErrorEntry> prosesParallel(String batchId, List<GajiBatchMaster> masters) {
+    private List<HitungPegawaiResult> prosesParallel(List<GajiBatchMaster> masters, GajiPreloadContext ctx) {
         try (ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor()) {
-            List<Future<ErrorEntry>> futures = masters.stream()
-                    .map(master -> executor.submit(() -> hitungSatu(batchId, master)))
+            List<Future<HitungPegawaiResult>> futures = masters.stream()
+                    .map(master -> executor.submit(() -> hitungSatu(master, ctx)))
                     .toList();
-            List<ErrorEntry> errors = new ArrayList<>();
-            for (Future<ErrorEntry> f : futures)
-                errors.add(f.get()); // hitungSatu tidak pernah throw — aman
-            return errors.stream().filter(Objects::nonNull).toList();
+            List<HitungPegawaiResult> results = new ArrayList<>();
+            for (Future<HitungPegawaiResult> f : futures) {
+                results.add(f.get());
+            }
+            return results;
         } catch (InterruptedException | ExecutionException e) {
-            // Interrupted → propagasi; ExecutionException tak mungkin (hitungSatu tak pernah throw)
-            if (e instanceof InterruptedException ie)
+            if (e instanceof InterruptedException)
                 Thread.currentThread().interrupt();
             throw new RuntimeException("Proses gaji paralel gagal", e);
         }
     }
 
-    private ErrorEntry hitungSatu(String batchId, GajiBatchMaster master) {
-        try {
-            // re-fetch instance FRESH per fork dalam transaksi fork sendiri: master hasil
-            // snapshot ter-manage transaksi lain → entitas JPA tidak boleh dibagikan antar thread.
-            GajiBatchMaster fresh = gajiBatchMasterRepository.findById(master.getId())
-                    .orElseThrow(() -> new IllegalStateException("Master " + master.getId() + " hilang"));
-            kalkulasiService.hitung(fresh, batchId);
-            return null;
-        } catch (GajiFormulaException e) {
-            // formula/seed bermasalah → DATA error (per pegawai, lanjut)
-            log.warn("DATA error pegawai {}: {}", master.getNipam(), e.getMessage());
-            return new ErrorEntry(master.getNipam(), master.getNama(), EJenisErrorGaji.DATA, e.getMessage());
-        } catch (Exception e) {
-            log.error("SYSTEM error pegawai {}: {}", master.getNipam(), e.getMessage(), e);
-            return new ErrorEntry(master.getNipam(), master.getNama(), EJenisErrorGaji.SYSTEM, e.getMessage());
-        }
+    private HitungPegawaiResult hitungSatu(GajiBatchMaster master, GajiPreloadContext ctx) {
+        return kalkulasiService.hitung(master, ctx);
     }
 
     private GajiBatchRoot root(String rootBatchId) {
@@ -154,6 +183,7 @@ public class GajiBatchProsesCommandService {
     }
 
     private void catatError(GajiBatchRoot batch, ErrorEntry e) {
+        if (e == null) return;
         GajiBatchRootErrorLogs error = new GajiBatchRootErrorLogs();
         error.setGajiBatchRoot(batch);
         error.setNipam(e.nipam());
